# CamMatrixCapture

./: .gitignore  CAMERA_DISCOVERY_SUCCESS.md  CMakeLists.txt  LICENSE  README.md  REFACTORING_SUMMARY.md  build.bat  build.ps1  minimal_test.cpp  read_sapera_raw.py  requirements.txt  simple_camera_test.cpp  simple_interface.cpp  start-system.bat  test_capture_engine.cpp
App/: App.xaml  App.xaml.cs  CameraMatrixCapture.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
App/Dialogs/: DebugConsoleDialog.xaml  DebugConsoleDialog.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs
App/Pages/: CapturePage.xaml  CapturePage.xaml.cs  ConnectPage.xaml  ConnectPage.xaml.cs  DonePage.xaml  DonePage.xaml.cs  SetupPage.xaml  SetupPage.xaml.cs
App/Services/: CaptureService.cs
backend/src/: CameraAPI.cpp  CameraAPI.hpp  CameraConfigManager.cpp  CameraConfigManager.hpp  refactored_capture.cpp
backend/src/lib/: json.hpp
config/: BuildConfig.h.in  camera_config.json  system.json
docs/: README.md  architecture.md  getting-started.md
docs/modules/: README.md  bluetooth.md  capture.md  gui.md  hardware.md  utils.md
frontend/: README.md  index.html  styles.css
frontend/js/: api.js  app.js  camera-grid.js  controls.js  ui.js
include/: camera_manager.hpp  gui_manager.hpp
src/: camera_manager.cpp  gui_manager.cpp  main.cpp  main_gui.cpp  main_gui_direct.cpp  main_gui_integrated.cpp  main_gui_simple.cpp
src/api/: CaptureAPI.cpp  CaptureAPI.h  CaptureStateMachine.cpp  CaptureStateMachine.hpp  HttpServer.hpp
src/application/: Application.cpp  Application.hpp  ApplicationBuilder.cpp
src/bluetooth/: BluetoothCommands.hpp  BluetoothDevice.cpp  BluetoothDevice.hpp  BluetoothManager.cpp  BluetoothManager.hpp  BluetoothScanner.cpp  BluetoothScanner.hpp  TurntableController.cpp  TurntableController.hpp
src/camera/: mock_camera.cpp  mock_camera.hpp
src/capture/: AutoExposureController.cpp  AutoExposureController.hpp  AutomatedCaptureController.cpp  AutomatedCaptureController.hpp  NeuralCaptureSystem.cpp  NeuralCaptureSystem.hpp  ParameterController.cpp  ParameterController.hpp
src/config/: ConfigurationManager.cpp  ConfigurationManager.hpp
src/core/: CaptureEngine.cpp  CaptureEngine.hpp  Result.hpp  Types.hpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  camera_simulator.cpp  camera_simulator.hpp  camera_tester.cpp  camera_tester.hpp  sapera_camera.cpp  sapera_camera.hpp  sapera_defs.hpp  sapera_direct_access.cpp  sapera_direct_access.hpp  sapera_manager.cpp  sapera_manager.hpp  settings.hpp  simulated_camera_manager.cpp  simulated_camera_manager.hpp
src/core/image_processing/: CMakeLists.txt  filter.cpp  filter.hpp  filter_base.cpp  filter_base.hpp  filter_registry.cpp  filter_registry.hpp
src/core/image_processing/filters/: blur_filter.cpp  blur_filter.hpp  brightness_contrast_filter.cpp  brightness_contrast_filter.hpp  edge_detection_filter.cpp  edge_detection_filter.hpp  grayscale_filter.cpp  grayscale_filter.hpp  invert_filter.cpp  invert_filter.hpp  saturation_filter.cpp  saturation_filter.hpp  sepia_filter.cpp  sepia_filter.hpp  sharpen_filter.cpp  sharpen_filter.hpp  threshold_filter.cpp  threshold_filter.hpp  vignette_filter.cpp  vignette_filter.hpp
src/core/sapera/: README.md  camera_thread.cpp  camera_thread.hpp  sapera_camera.cpp  sapera_camera.hpp  sapera_camera_base.cpp  sapera_camera_base.hpp  sapera_camera_factory.cpp  sapera_camera_factory.hpp  sapera_camera_real.cpp  sapera_camera_real.hpp  sapera_multi_camera.cpp  sapera_multi_camera.hpp  sapera_single_camera.cpp  sapera_single_camera.hpp  sapera_utils.hpp
src/examples/: ModernDemo.cpp
src/gui/: Application.cpp  Application.hpp  AutomatedCapturePanel.cpp  AutomatedCapturePanel.hpp  BluetoothGui.cpp  BluetoothGui.hpp  CameraControlPanel.cpp  CameraControlPanel.hpp  CapturePanel.cpp  CapturePanel.hpp  GuiManager.cpp  GuiManager.hpp  HardwarePanel.cpp  HardwarePanel.hpp  LogPanel.cpp  LogPanel.hpp  NeuralCaptureGUI.cpp  NeuralCaptureGUI.hpp  ParameterPanel.cpp  ParameterPanel.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  StatusPanel.cpp  StatusPanel.hpp  gui_manager.cpp  gui_manager.hpp  main_window.cpp  main_window.hpp
src/gui/core/: NavigationRail.cpp  NavigationRail.hpp
src/gui/views/: CaptureView.cpp  CaptureView.hpp  FilesView.cpp  FilesView.hpp  HardwareView.cpp  HardwareView.hpp  SettingsView.cpp  SettingsView.hpp
src/gui/widgets/: CameraPreviewWidget.cpp  CameraPreviewWidget.hpp  CaptureStudioPanel.cpp  CaptureStudioPanel.hpp  CaptureStudioPanel_backup.cpp  CaptureStudioPanel_old.cpp  FileExplorerWidget.cpp  FileExplorerWidget.hpp  SessionWidget.cpp  SessionWidget.hpp
src/hardware/: CameraManager.cpp  CameraManager.hpp  CameraTypes.cpp  CameraTypes.hpp  SaperaCamera.cpp  SaperaCamera.hpp  SaperaCameraImpl.cpp  SaperaInterface.cpp  SaperaInterface.hpp
src/interfaces/: CameraInterface.hpp
src/reactive/: EventSystem.hpp
src/rendering/: HemisphereRenderer.cpp  HemisphereRenderer.hpp
src/ui/dialogs/: camera_mode_selector_dialog.cpp  camera_mode_selector_dialog.hpp  camera_test_dialog.cpp  camera_test_dialog.hpp  direct_camera_dialog.cpp  direct_camera_dialog.hpp  photo_preview_dialog.cpp  photo_preview_dialog.hpp
src/ui/pages/: page.cpp  page.hpp
src/ui/pages/calibration/: calibration_page.cpp  calibration_page.hpp
src/ui/pages/camera/: camera_page.cpp  camera_page.hpp  multi_camera_controller.cpp  multi_camera_controller.hpp  single_camera_controller.cpp  (+1 more)
src/ui/widgets/: camera_control_widget.cpp  camera_control_widget.hpp  camera_list_widget.cpp  camera_list_widget.hpp  direct_camera_widget.cpp  direct_camera_widget.hpp  sapera_status_widget.cpp  sapera_status_widget.hpp  video_display_widget.cpp  video_display_widget.hpp
src/utils/: Configuration.cpp  Configuration.hpp  FileSystem.cpp  FileSystem.hpp  JsonHelper.cpp  JsonHelper.hpp  Logger.cpp  Logger.hpp  NotificationSounds.cpp  NotificationSounds.hpp  SessionManager.cpp  SessionManager.hpp  SettingsManager.cpp  SettingsManager.hpp
web-bridge/: requirements.txt  web_bridge.py
(+8 files in other folders)
